--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="SBrH5qKXUVz1gL2kIWJinWAYlnI03xbyHYpgBJG1bGY" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A detailed review exposing the scam broker ZarvistaCM.com. Learn why ZarvistaCM is not legit and why traders should avoid it.">
